Add helper to crop images to the correct size and save them in correct format.

--- a/docs/nb_guidelines.qmd
+++ b/docs/nb_guidelines.qmd
@@ -11,7 +11,7 @@ format:
 import { atlasHero } from "/helpers/uiComponents.ojs"
 
 {
-  let hero_url = "./../../images/default_im.webp"
+  let hero_url = "./../../images/default_crop.webp"
   return atlasHero(nbTitle, hero_url)
 }
 
@@ -187,12 +187,16 @@ viewof form = Inputs.form( // returns a JS object of {var1: ..., var2: ...}
 form
 
 var1_master
-
 ```
 
-
 ## Images
-Each notebook should include a single hero image in `.webp` format, optimized for minimal file size without noticeable quality loss. Save the image in the `/images` directory using the notebook's name as the filename.
+Each notebook should include a single hero image in `.webp` format, optimized for minimal file size without noticeable quality loss. Save the image in the `/images` directory using the notebook's name as the filename. Included in the `/helpers` folder is a function to crop an image to the required size of 800x175 pixels and convert it to `webP`, if not already in this format. It is not required to use this function, but images do need to be in webP and cropped to this size for best performance. If a specific part of the image should be used, it should be manually cropped, rather than using the function.
+
+The below example shows how to use this function:
+
+```sh
+quarto run helpers/cropToWebP.ts 'default_im.webp' 'default_crop.webp'
+```
 
 # Data
 
