--- a/notebooks/nb_template/notebook_template.qmd
+++ b/notebooks/nb_template/notebook_template.qmd
@@ -10,7 +10,7 @@ date-edited: today
 ```{ojs}
 import { atlasTOC, atlasHero } from "/helpers/uiComponents.ojs"
 
-hero_url = "./../../images/default_im.webp" 
+hero_url = "./../../images/default_crop.webp" 
 // This ^^ must be relative path due to an issue
 // with how Quarto resolves certain paths if local image.
 // It can also be a url.
