Remove examples from Main branch to keep it clean reflect current state of atlas V3

--- a/index.qmd
+++ b/index.qmd
@@ -2,16 +2,7 @@
 title: "Adaptation Atlas Notebooks"
 ---
 
-This page will likely note be public facing in production. We have the [landing page](https://adaptationatlas.cgiar.org) for that.
-However, this index page is useful in development to bounce between the examples, different notebooks being worked on, etc. 
-
-# Deprecated/Demo Notebooks
-
-These notebooks are example ports from the original Atlas [notebooks](https://observablehq.com/@adaptationatlas). These may be useful for reference, but are not actively maintained or updated. 
-They may also be useful as examples for how to create your own quarto notebooks. However, they may use old datasets, functions that are no longer applicable, and old code standards.
-
-- [Analyze Women's Exposure To Climate Hazards](/notebooks/deprecated/gender.qmd)
-- [Discover Solutions](/notebooks/deprecated/DiscoverSolutions.qmd)
+This page will often not be used directly in production. We have the [landing page](https://adaptationatlas.cgiar.org) for that.
 
 # Notebook Template
 We provide a basic notebook template which can be copied and modified to assist in the development of new notebooks.
