fix: correct the wrong path image issue for GH pages.

--- a/docs/nb_guidelines.qmd
+++ b/docs/nb_guidelines.qmd
@@ -11,7 +11,7 @@ format:
 import { atlasHero } from "/helpers/uiComponents.ojs"
 
 {
-  let hero_url = "./../../images/default_crop.webp"
+  let hero_url = "./../images/default_crop.webp"
   return atlasHero(nbTitle, hero_url)
 }
 
