WIP: add notebook title

--- a/index.qmd
+++ b/index.qmd
@@ -16,3 +16,4 @@ libraries and shared data (such as the admin boundaries).
 
 - [Guidelines for Developing Observable Notebooks](/docs/nb_guidelines.qmd)
 - [Notebook Translation Guide](/docs/translation.qmd)
+- [Vulnerability Notebook](/notebooks/nb_vulnerability/notebook_vulnerability.qmd)
