fix(Data - Boundaries): Fixes some errors in the Admin boundaries where places were missing admin names
BREAKING CHANGE: Names of the boundary files have changed slightly which breaks the import of them. This was done purposely as there is a breaking chage in the topojson name which needs manually addressed where the topojson is imported.

--- a/notebooks/nb_template/_template_plot.qmd
+++ b/notebooks/nb_template/_template_plot.qmd
@@ -1,18 +1,17 @@
 ---
 pagetitle: "Template Modular Import Example"
-nb-authors: 
+nb-authors:
   - Brayden Youngberg
   - Pete Stewart
-date-created: '2025-02-19'
+date-created: "2025-02-19"
 date-edited: today
 ---
 
-
 ```{ojs}
 {
-  const data_topo = await FileAttachment("/data/shared/atlas_gaul_a1_africa_simple-vlowres.topojson").json();
+  const data_topo = await FileAttachment("/data/shared/atlas_gaul24_a1_africa_simple-vlowres.topojson").json();
 
-  const data = topojson.feature(data_topo, data_topo.objects["atlas_gaul_a1_africa"]);
+  const data = topojson.feature(data_topo, data_topo.objects["atlas_gaul24_a1_africa"]);
 
   const caption = "This is an example map which can be copied and modified for Atlas notebooks"
   // return plot
@@ -68,3 +67,4 @@ date-edited: today
   return plot
 }
 ```
+
