feat(ROI Tool): Add the basic framework for the ROI tool notebook update

--- a/index.qmd
+++ b/index.qmd
@@ -2,13 +2,21 @@
 title: "Adaptation Atlas Notebooks"
 ---
 
-This page will likely note be public facing in production. We have the [landing page](https://adaptationatlas.cgiar.org) for that.
-However, this index page is useful in development to bounce between the examples, different notebooks being worked on, etc. 
+This page will likely note be public facing in production. We have the
+[landing page](https://adaptationatlas.cgiar.org) for that. However, this index
+page is useful in development to bounce between the examples, different
+notebooks being worked on, etc.
+
+# ROI tool
+
+**Find the ROI tool [here](/notebooks/roi/roi_notebook.qmd)**
 
 # Notebook Template
-We provide a basic notebook template which can be copied and modified to assist in the development of new notebooks.
-This template creates the basic structure for the notebooks as well as loads in some of the useful 
-libraries and shared data (such as the admin boundaries).
+
+We provide a basic notebook template which can be copied and modified to assist
+in the development of new notebooks. This template creates the basic structure
+for the notebooks as well as loads in some of the useful libraries and shared
+data (such as the admin boundaries).
 
 **Find the template [here](/notebooks/nb_template/notebook_template.qmd)**
 
